--- a/changelog
+++ b/changelog
@@ -12,7 +12,8 @@
 	  - Build a Docker image
 	      % make image-build
 	  - Running a local shogi-server would look like
-	      % docker run -p 4081:4081 -v `pwd`/logs:/logs shogi-server/shogi-server
+	      % docker pull shogiserver/shogiserver
+	      % docker run -p 4081:4081 -v `pwd`/logs:/logs shogiserver/shogiserver
 
 2016-04-09  Daigo Moriwaki <daigo at debian dot org>
 
