--- a/changelog
+++ b/changelog
@@ -14,6 +14,8 @@
 	  - Running a local shogi-server would look like
 	      % docker pull shogiserver/shogiserver
 	      % docker run -p 4081:4081 -v `pwd`/logs:/logs shogiserver/shogiserver
+	* [shogi-server] shogi_server/game.rb:
+	  - Remove a debug message
 
 2016-04-09  Daigo Moriwaki <daigo at debian dot org>
 
