--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+2017-02-26 Daigo Moriwaki <daigo at debian dot org>
+
+	* utils/csa-filter.rb: Allow csa-filter.rb to filter games by a winner or loser
+	  New command lines, --winner <player> or --loser <player>, are now
+	  supported to supply extra filtering conditions. Note that each
+	  filter is combined as AND condition.
+	  E.g.
+	  - % ./csa-filter.rb ~/Downloads/20160314 --white gpsfish_xeon --loser gpsfish_xeon
+	  - % ./csa-filter.rb ~/Downloads/20160314 --white gpsfish_xeon --winner gpsfish_xeon
+	  (Closes #37023)
+
 2016-12-11  Daigo Moriwaki <daigo at debian dot org>
 
 	* Update Revision to 20161211.
