--- a/changelog
+++ b/changelog
@@ -10,6 +10,7 @@
 	  has been changed to add number of moves of a game, which would be of
 	  help for a script calculating rating scores.
 	  (Closes #37491)
+	* Update Revision to 20170902
 
 2017-02-26 Daigo Moriwaki <daigo at debian dot org>
 
