--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+2018-08-25  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server] Support a graceful shutdown.
+	  A file named "STOP" in the base directory prevents the server from
+	  starting new games including Floodgate matches.
+	  (Closes #38544)
+
 2018-04-07  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server] Give more penalty on assigning matches with same
