--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+2020-12-06  Daigo Moriwaki <daigo at debian dot org>
+
+	* [shogi-server] Improve timed-up detection (continued).
+	  The server now checks timed up when it receives a-single-space keep
+	  alive messages as well.
+	  Thanks to mizar for reports and patches.
+	  (Closes #40821)
+
 2020-10-04  Daigo Moriwaki <daigo at debian dot org>
 
 	* [shogi-server] Improve timed-up detection.
