--- a/changelog
+++ b/changelog
@@ -13,6 +13,7 @@
 	  "+7776FU '* 30 -3334FU +2726FU". Such messages are now deemed
 	  illegal.
 	  Thanks to mizar for a report.
+	* [shogi-server] Bump up the revision to 20201206
 
 2020-10-04  Daigo Moriwaki <daigo at debian dot org>
 
